fixing css landscape issue on mobile devices

--- a/public/styles.css
+++ b/public/styles.css
@@ -60,7 +60,7 @@ body, html {
   }
 }
 
-@media (max-width: 420px) {
+@media (max-width: 568px) {
   .header-title {
     font-size: 14px;
   }
@@ -90,7 +90,7 @@ body, html {
 @media (max-width: 980px) {
   .aside {
     height: 20vh;
-    display: inline-block;
+    flex-wrap: wrap;
   }
 }
 
@@ -171,12 +171,12 @@ body, html {
 }
 
 .legend-item {
+  width: 50%;
   padding-top: 8px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   height: 90%;
-  flex: 1;
 }
 
 .legend-value {
@@ -188,13 +188,9 @@ body, html {
 }
 
 @media (max-width: 980px) {
-
   .legend-item {
+    padding-top: 0px;
     height: 20%;
-    padding: 0 2px;
-    vertical-align: top;
-    display: inline-block;
-    width: 50%;
   }
 
   .legend-value {
